--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 			<header>
 				<h2>Modal.js</h2>
 			</header><br/>				    
-			The simplest Modal plugin using Javascript and CSS
+			Lorum ipsum
 		</div>
 		<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="modal.js" type="text/javascript"></script>
